test_suite/tests/ui/duplicate-attribute/rename-and-ser.stderr
error: unknown serde field attribute `serialize`
 --> $DIR/rename-and-ser.rs:6:27
  |
6 |     #[serde(rename = "x", serialize = "y")]
  |                           ^^^^^^^^^

error: aborting due to previous error

